Add results activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="com.netapp.scotch">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -27,6 +24,7 @@
         <activity android:name=".OpActivity" />
         <activity android:name=".WorkspaceActivity" />
         <activity android:name=".VsimActivity" />
+        <activity android:name=".ResultActivity" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
